C++/Concurrency/compiling_error.txt
In file included from C:/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/5.1.0/include/c++/thread:35:0,
                 from D:\Vinod\gitRepos\Learning\C++\Concurrency\ConcurrentWorld.cpp:2:
C:/TDM-GCC-64/lib/gcc/x86_64-w64-mingw32/5.1.0/include/c++/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
D:\Vinod\gitRepos\Learning\C++\Concurrency\ConcurrentWorld.cpp: In function 'int main()':
D:\Vinod\gitRepos\Learning\C++\Concurrency\ConcurrentWorld.cpp:12:3: error: 'thread' was not declared in this scope
   thread t(hello);
   ^
D:\Vinod\gitRepos\Learning\C++\Concurrency\ConcurrentWorld.cpp:13:3: error: 't' was not declared in this scope
   t.join();
   ^
